--- a/Project 1/assignment1.html
+++ b/Project 1/assignment1.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2024-08-31" />
 
-<title>Fit_Project</title>
+<title>Project 1</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,7 +350,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Fit_Project</h1>
+<h1 class="title toc-ignore">Project 1</h1>
 <h4 class="author">Nancy</h4>
 <h4 class="date">2024-08-31</h4>
 
